# rust-microbenchmarks

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: main.rs
