[package]
name = "instruction-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
harness = false

[dependencies]
core_affinity = "0.8.1"
futures = "0.3.29"
syscalls = "0.6.15"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
lazy_static = "1.4.0"
tokio = { version = "1.34.0", features = ["full"] }
